# steam-tag-ml

./: .gitattributes  .gitignore  README.md  exploration.ipynb  main.py  pyproject.toml  run_baseline.py
configs/: baseline.yaml  db_params.yaml  distilbert.yaml  distilbert_fine_tune.yaml  distilbert_overfit_test.yaml
data/: ddl.sql  get_app_details.py  get_dataset.sh
src/: dataset.py
src/models/: distilbert.py  distilbert_fine_tune.py
src/utils/: model_factory.py
